tests/models/enum/named/i32/fail/gt.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(gt = 2.0)]
        value: i32
    },
}
fn main() {}
